# Werewolf

rust/: .gitignore  Cargo.toml
rust/control/: Cargo.toml
rust/control/src/: capacity.rs  lib.rs  restart.rs
rust/db/: Cargo.toml
rust/db/src/: lib.rs
rust/game-engine/: Cargo.toml
rust/game-engine/src/: game.rs  lib.rs  orchestrator.rs
rust/game-engine/src/roles/: alpha_wolf.rs  apprentice_seer.rs  arsonist.rs  augur.rs  barkeep.rs  beholder.rs  blacksmith.rs  chef.rs  chemist.rs  clumsy_guy.rs  cultist.rs  cultist_hunter.rs  cupid.rs  cursed.rs  detective.rs  doppelganger.rs  drunk.rs  fool.rs  grave_digger.rs  guardian_angel.rs  gunner.rs  harlot.rs  hunter.rs  lovers.rs  lycan.rs  mason.rs  mayor.rs  mod.rs  oracle.rs  pacifist.rs  prince.rs  sandman.rs  seer.rs  serial_killer.rs  snow_wolf.rs  sorcerer.rs  spumpkin.rs  tanner.rs  thief.rs  traitor.rs  (+8 more)
rust/game-engine/tests/: day_orchestration.rs  full_game.rs  night_orchestration.rs  transforms.rs
rust/i18n/: Cargo.toml
rust/i18n/src/: lib.rs
rust/i18n/tests/: loads_real_language_files.rs
rust/moderation/: Cargo.toml
rust/moderation/src/: lib.rs
rust/shared/: Cargo.toml
rust/shared/src/: lib.rs
rust/sim/: Cargo.toml
rust/sim/fixtures/: games_100.json  games_deterministic.json
rust/sim/src/: fixture.rs  lib.rs  presenter.rs  replay.rs  transcript.rs
rust/sim/tests/: deterministic_regression_gate.rs  fixture_day_replay.rs  fixture_full_game_replay.rs  fixture_presenter_replay.rs  fixture_validation.rs  locale_coverage.rs  narration_fuzz.rs  transcript.rs  win_condition_replay.rs
(+2 files in other folders)
