[workspace]
resolver = "2"
members = [
    "shared",
    "game-engine",
    "sim",
    "i18n",
    "moderation",
    "control",
    "db",
]

[workspace.package]
edition = "2021"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
quick-xml = { version = "0.36", features = ["serialize"] }
sysinfo = "0.32"
